fix contrast and size bugs

--- a/css/home.css
+++ b/css/home.css
@@ -39,7 +39,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 355px;
+  height: 355px; /* Village drawing height */
 }
 
 .home__intro__village__ground,
@@ -62,7 +62,7 @@
   font-weight: 300;
   padding: 3rem 3rem 390px 3rem;
   margin: 0 auto;
-  text-shadow: 0 0 6px rgba(54, 146, 175, 0.77),1px 1px 1px rgba(54, 146, 175, 0.55);
+  text-shadow: 0 0 0.5rem rgba(54, 146, 175, 0.77),0.1rem 0.1rem 0.1rem rgba(54, 146, 175, 0.55);
   line-height: 120%;
 }
 
