--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,7 @@ html {
     line-height: 1.4;
 }
 
-@media only screen and (min-width: 2000px) and (orientation: landscape),
-           screen and (min-width: 1200px) and  (min-resolution: 2dppx) {
+@media only screen and (min-width: 2000px) and (orientation: landscape) {
   html {font-size: 1.6em;}
 }
 
