--- a/css/main_nav.css
+++ b/css/main_nav.css
@@ -8,7 +8,7 @@
 .main_nav__logo {
   float: left;
   line-height: 2rem;
-  margin: 2rem;
+  margin: 2rem 0;
 }
 
 .main_nav__list {
@@ -26,7 +26,7 @@
 }
 
 @media only screen and (min-width: 320px) and (orientation: portrait) {
-  .main_nav { height: auto; min-height: inherit; padding: 0; }
-  .main_nav__logo { margin: 1rem;}
+  .main_nav { height: auto; min-height: inherit; padding: 0 1rem; }
+  .main_nav__logo { margin: 1rem 0;}
   .main_nav__list { display: none }
 }
